# rules_python_repro

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  gazelle_python.yaml  requirements_lock.txt  run_code_coverage.sh
projects/libs/examples/calculator/: BUILD.bazel  calculator_test.py
