module(name = "python_sfdc_bazel")


# direct dependencies
# python deps
bazel_dep(name = "aspect_rules_py", version = "1.2.1")
bazel_dep(name = "rules_python", version = "1.1.0")

# python toolchain configuration
python_version = "3.11.10"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")


python.toolchain(
    configure_coverage_tool = True,
    python_version = python_version,
)
use_repo(python, "python_3_11_10")

# python third party dependencies
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = python_version,
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")