"""
All new bazel deps should be brought in with MODULE.bazel (aka bzlmod).
For now, internal deps e.g. shared-tools are brought in with WORKSPACE.
"""

module(name = "python_sfdc_bazel")

mirror_path = "https://rpm.repo.local.sfdc.net/artifactory/strata-blobs/sfdc-bazel"

docker_registry = "docker.repo.local.sfdc.net"

# direct dependencies
# python deps
bazel_dep(name = "aspect_rules_py", version = "1.2.1")
bazel_dep(name = "rules_python", version = "1.1.0")

#sonar qube
bazel_dep(name = "bazel_sonarqube", version = "1.0.2")

# gazelle deps
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.1.0")
bazel_dep(name = "gazelle", repo_name = "bazel_gazelle", version = "0.41.0")

# python toolchain configuration
python_version = "3.11.10"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

# these are sourced from:
# https://github.com/indygreg/python-build-standalone/releases
# based on the following, these are approved:
# https://gus.lightning.force.com/lightning/r/ADM_Third_Party_Software__c/a0qEE00000086oDYAQ/view,
# https://salesforce-internal.slack.com/archives/C9JDPQLDA/p1715785698097429?thread_ts=1715782669.227839&cid=C9JDPQLDA
python.single_version_override(
    python_version = python_version,
    sha256 = {
        "aarch64-apple-darwin": "ecdc9c042b8f97bff211fcf9425bc51c96acd4037df1565964e89816f2c9564d",
        "aarch64-unknown-linux-gnu": "320635e957e13d2e10d70a3031563d032fae9e40e60e5ec32bc353643fae1335",
        "x86_64-apple-darwin": "a618c086e0514f681523947e2b66a4dc0c6560f91c36faa072fa6787455df9ea",
        "x86_64-unknown-linux-gnu": "ff121f14ed113c9da83a45f76c3cf41976fb4419fe406d5cc7066765761c6a4e",
    },
    urls = [
        # The format of this url is important i.e. the /cpython/<version>/ part.
        # https://github.com/bazelbuild/rules_python/issues/1800
        "https://rpm.repo.local.sfdc.net/artifactory/strata-blobs/sfdc-bazel/cpython/20241008/cpython-{python_version}+20241008-{platform}-{build}.tar.gz",
        "https://github.com/indygreg/python-build-standalone/releases/download/20241008/cpython-{python_version}+20241008-{platform}-{build}.tar.gz",
    ],
)

python.toolchain(
    configure_coverage_tool = True,
    # https://github.com/bazelbuild/rules_python/issues/1169
    ignore_root_user_error = True,
    python_version = python_version,
)

use_repo(python, "python_3_11_10")

# python third party dependencies
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pip",
    python_version = python_version,
    requirements_lock = "//:requirements_lock.txt",
)

use_repo(pip, "pip")
