load("@aspect_rules_py//py:defs.bzl", "py_library", "py_pytest_main", "py_test")

py_library(
    name = "calculator",
    srcs = ["calculator.py"],
    visibility = ["//:__subpackages__"],
)

py_test(
    name = "calculator_test",
    srcs = [
        "calculator_test.py",
        ":__test__",
    ],
    main = ":__test__.py",
    deps = [
        ":__test__",
        ":calculator",
    ],
)

py_pytest_main(
    name = "__test__",
    deps = [
        "@pip//coverage",
        "@pip//pytest",
    ],
)
